# ETHTrainer

./: .dev.vars.example  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Hetzner_Liquidation_Deployment.md.md  README.md  ecosystem.config.cjs  hardhat.config.cjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
.githooks/: pre-commit
.github/workflows/: deploy.yml
contracts/: LiquidationBot.sol
contracts/interfaces/: IAavePool.sol  ISwapRouter.sol
docs/: ai-setup-prompt.md  spec.md
liquidator/: Cargo.toml
liquidator/src/: chains.rs  config.rs  db.rs  event_listener.rs  health_scanner.rs  hot_tracker.rs  main.rs  missed_tracker.rs  opportunity_ranker.rs  tx_submitter.rs  types.rs
scripts/: backtest.ts  deploy-liquidation-bot-base.ts  deploy-liquidation-bot.ts  research.ts  run-autoresearch.ts  seed-borrowers.ts  seed-params.ts  setup-wallet.ts  watch_liq.sql
src/: config.ts  index.ts
src/agents/: base.ts  executor-agent.ts  master.ts  munger.ts  researcher.ts  risk-manager.ts  strategist.ts
src/autoresearch/: anvil_simulator.ts  collector.ts  loop.ts  parameter_compiler.ts  shadow_evaluator.ts  types.ts  watchlist_pruner.ts
src/backtester/: index.ts
src/db/: index.ts  queries.ts  schema.ts
src/ethereum/: client.ts
src/llm/: index.ts
src/monitor/: index.ts  metrics.ts
src/strategies/: lido.ts
src/telegram/: bot.ts
src/tests/: backtester.test.ts  db.test.ts  keychain.test.ts
src/wallet/: keychain.ts  keystore.ts
tasks/: lessons.md  todo.md
tasks/playbooks/: derivatives_delta_neutral.md  (+5 more)
(+8 files in other folders)
