[package]
name = "liquidator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "liquidator"
path = "src/main.rs"

[dependencies]
# Ethereum — alloy is the modern successor to ethers-rs
alloy = { version = "1", features = [
    "full",
    "signer-local",
    "signer-local-keystore",
    "provider-http",
    "provider-ws",
    "contract",
    "sol-types",
] }

# Async utilities
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite (bundled — no system sqlite required)
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Environment variables
dotenvy = "0.15"

# File watching (for heuristic_params.json hot-reload)
notify = "6"

# Async channel for cross-task communication
tokio-stream = "0.1"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
